# athena-databricks-connector

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: CI.yml
src/athena-databricks-connector/: __init__.py
src/athena_databricks_connector/: __main__.py  main.py
