[project]
name = "athena-databricks-connector"
version = "1.0.0"
description = "This connector enables AWS Athena to communicate with Databricks."
authors = [
    {name = "Leonhard Zacharias", email = "leonhard.zacharias@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "ruff>=0.5.7",
    "mypy>=1.11.1",
    "pytest-testmon>=2.1.1",
    "pdoc>=14.6.0",
    "python-semantic-release>=9.8.6",
]

[project.scripts]
athena-databricks-connector = "athena_databricks_connector:main"

[tool.ruff.lint]
# pyflakes, pycodestyle, isort
select = ["F", "E", "W", "I001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
upload_to_PyPI = false
upload_to_release = true
build_command = """
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add uv.lock
    uv build
"""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/athena-databricks-connector"]
